# gpt3-chatbot

./: README.md  TODO.txt  chat.ps1  chatbot.spec  example.py  pyproject.toml
characters/: czech_standard.json  default.json  english_stuff.json  german_standard.json  spanish_standard.json
gpt3_chatbot/: __init__.py  chatbot.py  chatbot.spec  grammar_correction.py  helper_functions.py  listen.py  read.py
tests/: test_gpt3_chatbot.py
